cmake_minimum_required(VERSION 3.8)
project(vectorTargetSum)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        cmake-build-debug/untitled
        cmake-build-debug/untitled.cbp
        CMakeLists.txt
        main.cpp)

add_executable(vectorTargetSum ${SOURCE_FILES})